# teste_integra-o

./: .env  .gitignore  README.md  consume.py  main.py  pyproject.toml
api/: .env  .env.example  README.md  main.py  pyproject.toml  requirements.txt
api/app/: main.py  schemas.py
api/app/api/: database.py  models.py
api/app/core/: config.py
api/scripts/: config.py  import_data.py  script.sql
app/: csv_parsing.py  main.py
app/scripts/: script.sql
csv_script/: README.md  constants.py  consume.py  csv_parsing.py  main.py
frontend/: README.md
frontend/src/components/: OperadorasTable.vue  UFChart.vue
frontend/src/views/: Estatisticas.vue  Home.vue
